--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
                 <img src="images/logo.webp" alt="logo">
             </a>
             <div class="navLinks" id="navLinks">
-                <!-- <i class="fa fa-times" onclick="hideMenu()"></i> -->
+                <i class="fa fa-times" onclick="hideMenu()"></i>
                 <ul>
                     <li><a href="#header">Home</a></li>
                     <li><a href="#functionality">How it works</a></li>
@@ -22,7 +22,7 @@
                     <li><a href="#contactUs">Contact us</a></li>
                 </ul>
             </div>
-            <!-- <i class="fa fa-bars" onclick="showMenu()"></i> -->
+                <i class="fa fa-bars" onclick="showMenu()"></i>
         </nav>
     </section>
    
@@ -154,7 +154,7 @@
         function showMenu(){
             navLinks.style.right='0'
         }
-        function hideMwnu(){
+        function hideMenu(){
             navLinks.style.right='-200px'
         }
     </script>
